# algobowl

./: .build.yml  .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  VERSION  buf.gen.yaml  buf.yaml  cdnify.py  cli_launcher.py  development.ini.sample  fake_mpapi.py  go.mod  go.sum  migration_test.sh  pyproject.toml  release.py  setup.py
.github/workflows/: ci.yml
algobowl/: __init__.py  __main__.py  admin.py  auth.py  config.py  fernet.py  model.py
algobowl-python-problem-server/: README.md  pyproject.toml
algobowl-python-problem-server/src/algops/: _connect.py  app.py  problemlib.py
algobowl-python-problem-support/: README.md  pyproject.toml
algobowl-python-problem-support/src/algobowl/lib/problem/: __init__.py  _problem.py
algobowl/cli/: __main__.py  admin.py  auth.py  config.py  formatter.py  group.py  problem.py
algobowl/config/: app_cfg.py  auth.py  environment.py  middleware.py
algobowl/controllers/: __init__.py  competition.py  error.py  file_redirector.py  group.py  pref.py  root.py  setup.py
algobowl/lib/: app_globals.py  base.py  constants.py  helpers.py  (+5 more)
doc/: competition-setup.rst
docs/: cli.md  problem_format.md  rules.md
example_problems/number_in_range/: problem.py  pyproject.toml  statement.tex  worker.py  wrangler.jsonc
example_problems/number_in_range/public/: statement.md
example_problems/number_in_range/test_data/inputs/bad/: garbage.in  negative.in  same_line.in
example_problems/number_in_range/test_data/outputs/good/: example_opt.in  max.in
migration/: env.py
sampdata/: 1.sql
server/: main.go
(+57 files in other folders)
