[project]
name = "algobowl-python-problem-server"
version = "0.1.0"
description = "Problem server library for AlgoBOWL"
authors = [
    { name = "Jack Rosenthal", email = "jack@rosenth.al" }
]
requires-python = ">=3.11"
dependencies = [
    "protobuf>=5.28",
    "algobowl-python-problem-support",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "algops"
