[project]
name = "algobowl-python-problem-support"
version = "0.1.0"
description = "Problem support library for AlgoBOWL"
readme = "README.md"
authors = [
    { name = "Jack Rosenthal", email = "jack@rosenth.al" }
]
requires-python = ">=3.9"
dependencies = [
    "typing-extensions",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "algobowl.lib.problem"
