[project]
name = "algobowl-problem-number-in-range"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "algobowl-python-problem-server",
]

[dependency-groups]
dev = [
    "workers-py",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
